--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "setup": "node scripts/initDatabase.js",
+    "setup:force": "node scripts/initDatabase.js --force"
   },
   "keywords": [],
   "author": "",
